feat : 가게 수정 및 삭제